2002-11-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* configure.in: Don't recurse into doc dir while building unless
	"--enable-doc is passed to configure. This allows a default build to
	bypass building the docs, but still allows the user to cd into the doc
	dir and build the docs if they feel lucky. Do you feel lucky, punk?

2002-11-18  Theodore A. Roth  <troth@openavr.org>

	* libc/string/memcmp.S: Add note about unsigned nature of compare.

2002-11-18  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/inline_asm.dox: Update URL for project.
	Remove link to Rich Neswold's document since it is now (mostly) merged
	in with avr-libc.
	* doc/api/main_page.dox: Update URL for project.
	Update avr-libc-dev list address.
	Add note about avr-gcc mailing list.

2002-11-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/Makefile: Use -j .text -j .data for avr-objcopy.
	* doc/examples/demo/demo.dox: Ditto.

2002-11-16  Theodore A. Roth  <troth@openavr.org>

	* doc/api/faq.dox: Add \code and \endcode around example. D'oh!
	* doc/api/using-tools.dox: Use \verbatim instead of <code>.
	* include/avr/pgmspace.h: Put both #includes in a single \code statement.

2002-11-16  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/faq.dox: Fix broken subject headers (doxygen-1.2.18 doesn't
		like them being bold when generating ps or pdf).
	Change \subsection to \section since doxygen-1.2.18 handles it properly
		now.
	New FAQ entry for arrays of strings in rom.
	* doc/api/inline_asm.dox: Change \subsection to \section since
		doxygen-1.2.18 handles it properly now.
	* doc/api/malloc.dox: Ditto.
	* doc/api/sections.dox: Ditto.
	* doc/api/tools-install.dox: Ditto.
	* doc/examples/demo/demo.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	Change <h3> headings to \subsection's.

2002-11-12  Theodore A. Roth  <troth@openavr.org>
